# sysgraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  biome.json  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements.txt  setup.py  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
data/: greek-mythology.json  simplest-graph.json
scripts/: build-image.sh  build-ui.sh  compile-requirements.sh  dev-ui.sh  docker-entrypoint.sh  lint-ui.sh  lint.sh  publish-image.sh  publish-pypi.sh  typecheck-ui.sh
src/procmap/: __main__.py  app.py  discovery.py  graph.py  main.py  model.py
src/procmap-ui/: app.js  index.html
src/procmap-ui/modules/: color-scale.js  details-panel.js  graph-algs.js  graph-ui.js  search.js  settings-pane.js  state.js  toolbar.js
src/procmap/static/: app.js  cdn-module-types.d.ts  index.html
src/procmap/static/modules/: context-menu.js  data-io.js  event-bus.js  graph-algs.js  graph-ui.js  graph.js  graphAlgs.js  search.js  selection.js  settings-pane.js  settings.js  state.js  toolbar.js  util.js
src/procmap/tests/: test_discovery.py
src/sysgraph/: __main__.py  app.py  constants.py  discovery.py  graph.py  main.py  model.py
src/sysgraph-ui/: app.js  app.ts  index.html  styles.css
src/sysgraph-ui/modules/: color-scale.ts  constants.js  constants.ts  context-menu.js  context-menu.ts  data-io.js  data-io.ts  details-panel.js  details-panel.ts  event-bus.ts  graph-algs.ts  graph-ui-helpers.js  graph-ui-helpers.ts  graph-ui.js  graph-ui.ts  graph.js  graph.ts  render-hooks.ts  search-parser.js  search-parser.ts  search.js  search.ts  selection.js  selection.ts  settings-pane.js  settings-pane.ts  settings-presets.js  settings-presets.ts  settings.js  settings.ts  state.js  state.ts  toolbar.js  toolbar.ts  util.js  util.ts  zoom-indicator.ts
src/sysgraph/tests/: test_discovery.py  test_graph.py
