[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysgraph"
dynamic = ["version"]
description = "Visualizer for processes and their interconnections"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Eugene Gubenkov", email = "gubenkoved@gmail.com" }]
requires-python = ">=3.12"
keywords = ["process", "visualization", "graph", "ipc", "system", "monitoring", "cross-platform", "macos", "linux"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "psutil",
    "coloredlogs",
    "fastapi>=0.95",
    "uvicorn>=0.20",
]

[project.urls]
Source = "https://github.com/gubenkoved/sysgraph"
Issues = "https://github.com/gubenkoved/sysgraph/issues"

[project.scripts]
sysgraph = "sysgraph.app:main"

[tool.setuptools.dynamic]
version = { attr = "sysgraph.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sysgraph = ["dist/*", "dist/**/*"]

[tool.ruff]
line-length = 79
target-version = "py312"
# Tune ruff rules as needed. Ruff supports many checks and can also format (`ruff format`).
# See https://beta.ruff.rs/docs/configuration/ for config options.
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
